<resources>
    <string name="app_name">UserProfile4</string>
    <string name="tv_profile">پروفایل</string>
    <string name="edit_info_title">لطفا اطلاعات کاربری خود را کامل کنید</string>
    <string name="record_info">ثبت اطلاعات</string>
    <string name="data_of_birth">تاریخ تولد</string>
    <string name="edit_info">ویرایش اطلاعات</string>
    <string name="gender">جنسیت</string>
    <string name="address">محل سکونت</string>
    <string name="name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="national_code">کد ملی</string>
    <string name="phone_fix_number">شماره تلفن ثابت</string>
    <string name="phone_number">شماره تلفن همراه</string>
    <string name="day">روز</string>
    <string name="month">ماه</string>
    <string name="year">سال</string>
    <string name="man">مرد</string>
    <string name="woman">زن</string>
    <string name="province">استان</string>
    <string name="city">شهر</string>
    <string name="flname">نام و نام خانوادگی گیرنده</string>
    <string name="phone_num_reciver">شماره تلفن همراه گیرنده</string>
    <string name="fix_phone_num_reciver">شماره تلفن ثابت گیرنده</string>
    <string name="city_code">کد</string>
    <string name="post_code">کد پستی</string>
    <string name="post_address">نشانی پستی</string>
    <string name="record_address_in_map">ثبت نشانی روی نقشه</string>
    <string name="old_pass">رمز عبور قدیم</string>
    <string name="new_pass">رمز عبور جدید</string>
    <string name="rep_new_pass">تکرار رمز عبور جدید</string>
    <string name="change_pass">تغییر رمز عبور</string>
    <string name="edit">ویرایش</string>
    <string name="delete">حذف</string>
    <string-array name="items">
        <item>ویرایش اطلاعات</item>
        <item>سفارشات</item>
        <item>لیست موردعلاقه</item>
        <item>پیام ها</item>
        <item>آدرس های من</item>
        <item>شماره کارت بانکی</item>
        <item>تغییر رمز عبور</item>
        <item>خروج</item>


    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_address">MyAddressActivity</string>


</resources>
